tests/fixtures/syntax/invalid/document_case_scope_not_supported.repor
# v0 supports only the `file` document scope; `document case` (#169) is not
# part of the grammar yet and fails at parse time.
document case {
  title "not yet supported"
}

case "case after unsupported document scope" {
  $ true
  assert {
    exit 0
  }
}
